--- a/Views/screen.html
+++ b/Views/screen.html
@@ -39,7 +39,7 @@
     <iframe
       style="width:100%; height: 82vh; border-style: none;"
       id="gameviewer"
-      src="/quimica/gameviewer.html"
+      src="/com.jorgestudios.heheboy/gameviewer.html"
     ></iframe>
   </body>
 </html>
